--- a/AspNetMvcBlog/Views/Shared/_Layout2.cshtml
+++ b/AspNetMvcBlog/Views/Shared/_Layout2.cshtml
@@ -34,7 +34,7 @@
 
 
 	@*Footer was here. I have created _FooterPartialViews.cshtml file and sent it.*@
-	@Html.Partial("_FooterPartialViews")
+	@Html.Partial("Footer2PartialViews")
 
 	<!-- THEME JAVASCRIPT FILES
 	================================================== -->
