--- a/AspNetMvcBlog/Views/Shared/_ArticlesPartialViews.cshtml
+++ b/AspNetMvcBlog/Views/Shared/_ArticlesPartialViews.cshtml
@@ -1,4 +1,6 @@
-﻿<section class="section-padding">
+﻿
+
+<section class="section-padding">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
