--- a/AspNetMvcBlog/Views/Shared/_Layout2.cshtml
+++ b/AspNetMvcBlog/Views/Shared/_Layout2.cshtml
@@ -23,10 +23,10 @@
     <link rel="stylesheet" href="~/css/style.css">
 </head>
 <body>
-	
-	@*Navbar(Menu) was here. I have created _HeaderPartialViews.cshtml file and sent it.*@
-	@Html.Partial("_HeaderPartialViews")
-    
+	<header>
+		@await Component.InvokeAsync("Navbar");
+	</header class="header-top bg-grey justify-content-center>
+
 	<div class="container">
             @RenderBody()
     </div>
