--- a/AspNetMvcBlog/Views/Blog/Index.cshtml
+++ b/AspNetMvcBlog/Views/Blog/Index.cshtml
@@ -37,12 +37,13 @@
 					{
 						<div class="col-lg-3 col-md-6">
 							<article class="post-grid mb-5">
-								<a class="post-thumb mb-4 d-block" href="blog-single.html">
+								<a class="post-thumb mb-4 d-block" asp-action="Detail" asp-controller="Blog" asp-route-id=@item.Id>
 									<img src=~/images/news/f4.jpg alt="" class="img-fluid w-100">
 								</a>
 								<span class="cat-name text-color font-extra text-sm text-uppercase letter-spacing-1">@item.Tag</span>
-								<h3 class="post-title mt-1"><a href="blog-single.html">@item.Title</a></h3>
+								<h3 class="post-title mt-1"><a asp-action="Detail" asp-controller="Blog" asp-route-id=@item.Id>@item.Title</a></h3>
 								<span class="text-muted letter-spacing text-uppercase font-sm">@DateTime.Now</span>
+								
 							</article>
 						</div>
 					}
